--- a/index.html
+++ b/index.html
@@ -212,38 +212,44 @@
                 </ul>
             </section>
            </div>
-           <section>
-            <h2 class="titel features client">Постійні клієнти</h2>
+           <section class="titel features section-client conteiner" >
+            <h2 class="client">Постійні клієнти</h2>
             <ul class="client-list">
-                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank"></a>
+                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
                     <svg class="client-soc-icons" width="106" height="60">
-                        <use href="./images/icons.svg#icon-Logo"></use>
-                    </svg>
+                    <use href="./images/icons.svg#icon-Logo"></use>
+                </svg>
+            </a>
                 </li>
-                <li>
-                    <svg>
-                        <use href=""></use>
-                    </svg>
+                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank"> 
+                <svg class="client-soc-icons" width="106" height="60">
+                    <use href="./images/icons.svg#icon-Logo2"></use>
+                </svg>
+            </a>                   
                 </li>
-                <li>
-                    <svg>
-                        <use href=""></use>
-                    </svg>
+                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                    <svg class="client-soc-icons" width="106" height="60">
+                    <use href="./images/icons.svg#icon-Logo3"></use>
+                </svg>
+            </a>                    
                 </li>
-                <li>
-                    <svg>
-                        <use href=""></use>
-                    </svg>
+                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                    <svg class="client-soc-icons" width="106" height="60">
+                    <use href="./images/icons.svg#icon-Logo4"></use>
+                </svg>
+            </a>                    
                 </li>
-                <li>
-                    <svg>
-                        <use href=""></use>
-                    </svg>
+                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                    <svg class="client-soc-icons" width="106" height="60">
+                    <use href="./images/icons.svg#icon-Logo5"></use>
+                </svg>
+            </a>                    
                 </li>
-                <li>
-                    <svg>
-                        <use href=""></use>
-                    </svg>
+                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank"> 
+                <svg class="client-soc-icons" width="106" height="60">
+                    <use href="./images/icons.svg#icon-Logo6"></use>
+                </svg>
+            </a>                
                 </li>
             </ul>
            </section>
