--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
 <body class="body">
     <header class="header">
         <div class="conteiner header-conteiner">
-            <a href="https://cardinal-cortez.github.io/goit-markup-hw-03" class="logo"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+            <a href="https://cardinal-cortez.github.io/goit-markup-hw-04" class="logo"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
             <nav class="navigation">
                 <ul class="header-nav">
-                    <li><a href="https://cardinal-cortez.github.io/goit-markup-hw-03" class="header-nav-link">Студія</a></li>
-                    <li><a href="https://cardinal-cortez.github.io/goit-markup-hw-03/portfolio.html" class="header-nav-link">Портфоліо</a></li>
+                    <li><a href="https://cardinal-cortez.github.io/goit-markup-hw-04" class="header-nav-link">Студія</a></li>
+                    <li><a href="https://cardinal-cortez.github.io/goit-markup-hw-04/portfolio.html" class="header-nav-link">Портфоліо</a></li>
                     <li><a href="#" class="header-nav-link">Контакти</a></li>
                 </ul>
             </nav>
                 <ul class="header-contacts">
-                    <li><a href="mailto:info@devstudio.com" class="header-contacts-core mail-header">info@devstudio.com</a></li>
-                    <li><a href="tel:++380961111111" class="header-contacts-core tel-header">+38 096 111 11 11</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="header-contacts-core mail-header">       
+                        <svg class="tel-item" width="16" height="12">
+                        <use href="./images/icons.svg#icon-envelopehover"></use>
+                    </svg>info@devstudio.com</a></li>
+                    <li><a href="tel:++380961111111" class="header-contacts-core tel-header">
+                        <svg class="tel-item" width="10" height="16">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
                 </ul>           
         </div>
     </header>
@@ -256,7 +262,7 @@
     </main>
     <footer class="footer">
         <div class="conteiner footer-container">
-            <a href="https://cardinal-cortez.github.io/goit-markup-hw-03" class="logo-footer"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
+            <a href="https://cardinal-cortez.github.io/goit-markup-hw-04" class="logo-footer"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
             <address>
                 <div class="address">
                     <ul class="list-footer">
