--- a/portfolio.html
+++ b/portfolio.html
@@ -113,16 +113,37 @@
     </main>
     <footer class="footer">
         <div class="conteiner footer-container">
-            <a href="https://cardinal-cortez.github.io/goit-markup-hw-04" class="logo-footer"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
-            <address>
-                <div class="address">
-                    <ul class="list-footer">
-                        <li class="list-block"><a href="https://goo.gl/maps/taaaHP7BocLZiyMx6" target="_blank" rel="noopener noreferrer" class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="list-block"><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
-                        <li class="list-block"><a href="tel:++380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
-                    </ul>
-                </div>
+            <div class="address">
+                <a href="https://cardinal-cortez.github.io/goit-markup-hw-04" class="logo-footer"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
+                <address>
+                        <ul class="list-footer">
+                            <li class="list-block"><a href="https://goo.gl/maps/taaaHP7BocLZiyMx6" target="_blank" rel="noopener noreferrer" class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                            <li class="list-block"><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
+                            <li class="list-block"><a href="tel:++380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
+                        </ul>
+            </div>   
             </address>
+            <div class="just">
+                <p class="doit">приєднуйтесь</p>
+                <ul class="doit-list">
+                    <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
+                        <svg class="doit-soc-icons" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use></svg>
+                        </a></li>
+                    <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
+                        <svg class="doit-soc-icons" width="20" height="20">
+                        <use href="../images/icons.svg#icon-twitter"></use></svg>
+                        </a></li>
+                    <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
+                        <svg class="doit-soc-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                        </a></li>
+                    <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
+                        <svg class="doit-soc-icons" width="20" height="20">
+                            <use href="./images/icons.svg#icon-linkedin"></use></svg>
+                        </a></li>                 
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
