--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,19 @@
                     <li><a href="https://cardinal-cortez.github.io/goit-markup-hw-04/portfolio.html" class="header-nav-link">Портфоліо</a></li>
                     <li><a href="#" class="header-nav-link">Контакти</a></li>
                 </ul>
-            </nav>
+            </nav>        
                 <ul class="header-contacts">
-                    <li><a href="mailto:info@devstudio.com" class="header-contacts-core mail-header">info@devstudio.com</a></li>
-                    <li><a href="tel:++380961111111" class="header-contacts-core tel-header">+38 096 111 11 11</a></li>
-                </ul>           
+                    <li class="header-contacts-link"><a href="mailto:info@devstudio.com" class="header-contacts-core write">       
+                        <svg class="write-item" width="16" height="12">
+                        <use href="./images/icons.svg#icon-envelopehover"></use>
+                        </svg>info@devstudio.com</a>
+                    </li>
+                    <li class="header-contacts-link"><a href="tel:++380961111111" class="header-contacts-core write">
+                        <svg class="write-item" width="10" height="16">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
+                    </li>
+                </ul>                      
         </div>
     </header>
     <main>
