--- a/index.html
+++ b/index.html
@@ -49,36 +49,44 @@
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="features-list">
                     <li class="item-features">
-                        <svg class="features-item" width="270" height="120">
-                            <use href="./images/icons.svg#icon-antenna"></use>
-                        </svg>
+                       <div class="features-item">
+                            <svg class="" width="70" height="70">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                       </div>
                         <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="feature-subtitle">Ідейні міркування, і навіть початок повсякденної 
                         роботи з формування позиції.
                         </p>
                     </li>
                     <li class="item-features">
-                        <svg class="features-item" width="270" height="120">
-                            <use href="./images/icons.svg#icon-clock"></use>
-                        </svg>
+                        <div class="features-item">
+                            <svg class="" width="70" height="70">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="feature-subtitle">Завдання організації, особливо рамки 
                         і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
                     <li class="item-features">
-                        <svg class="features-item" width="270" height="120">
-                            <use href="./images/icons.svg#icon-diagram"></use>
-                        </svg>
+                        <div class="features-item">
+                            <svg class="" width="70" height="70">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">ПЛАНУВАННЯ</h3>
                         <p class="feature-subtitle">Так само консультація з широким 
                         активом значною мірою зумовлює. 
                         </p>
                     </li>
                     <li class="item-features">
-                        <svg class="features-item" width="270" height="120">
-                            <use href="./images/icons.svg#icon-astronaut"></use>
-                        </svg>
+                        <div class="features-item">
+                            <svg class="" width="70" height="70">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="feature-subtitle">Значимість цих проблем настільки очевидна, 
                         що реалізація планових завдань.
@@ -220,46 +228,48 @@
                 </ul>
             </section>
            </div>
-           <section class="titel features section-client conteiner" >
-            <h2 class="client">Постійні клієнти</h2>
-            <ul class="client-list">
-                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+           <section class=" section">
+            <div class="conteiner">
+                <h2 class="titel">Постійні клієнти</h2>
+                <ul class="client-list">
+                    <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                        <svg class="client-soc-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logo"></use>
+                    </svg>
+                </a>
+                    </li>
+                    <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank"> 
                     <svg class="client-soc-icons" width="106" height="60">
-                    <use href="./images/icons.svg#icon-Logo"></use>
-                </svg>
-            </a>
-                </li>
-                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank"> 
-                <svg class="client-soc-icons" width="106" height="60">
-                    <use href="./images/icons.svg#icon-Logo2"></use>
-                </svg>
-            </a>                   
-                </li>
-                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                        <use href="./images/icons.svg#icon-Logo2"></use>
+                    </svg>
+                </a>                   
+                    </li>
+                    <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                        <svg class="client-soc-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logo3"></use>
+                    </svg>
+                </a>                    
+                    </li>
+                    <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                        <svg class="client-soc-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logo4"></use>
+                    </svg>
+                </a>                    
+                    </li>
+                    <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
+                        <svg class="client-soc-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logo5"></use>
+                    </svg>
+                </a>                    
+                    </li>
+                    <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank"> 
                     <svg class="client-soc-icons" width="106" height="60">
-                    <use href="./images/icons.svg#icon-Logo3"></use>
-                </svg>
-            </a>                    
-                </li>
-                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
-                    <svg class="client-soc-icons" width="106" height="60">
-                    <use href="./images/icons.svg#icon-Logo4"></use>
-                </svg>
-            </a>                    
-                </li>
-                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank">
-                    <svg class="client-soc-icons" width="106" height="60">
-                    <use href="./images/icons.svg#icon-Logo5"></use>
-                </svg>
-            </a>                    
-                </li>
-                <li class="client-soc-group"><a href="#" class="client-soc-link" target="_blank"> 
-                <svg class="client-soc-icons" width="106" height="60">
-                    <use href="./images/icons.svg#icon-Logo6"></use>
-                </svg>
-            </a>                
-                </li>
-            </ul>
+                        <use href="./images/icons.svg#icon-Logo6"></use>
+                    </svg>
+                </a>                
+                    </li>
+                </ul>
+            </div>
            </section>
     </main>
     <footer class="footer">
@@ -283,7 +293,7 @@
                         </a></li>
                     <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
                         <svg class="doit-soc-icons" width="20" height="20">
-                        <use href="../images/icons.svg#icon-twitter"></use></svg>
+                        <use href="./images/icons.svg#icon-twitter"></use></svg>
                         </a></li>
                     <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
                         <svg class="doit-soc-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use>
