--- a/portfolio.html
+++ b/portfolio.html
@@ -51,68 +51,86 @@
             </div>
            <div class="conteiner">
                 <ul class="conteiner-portfolio">                    
-                        <li class="item-portfolio">
+                        <li class="">
+                            <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/технокряк1.jpg" alt="ноутбук" width="370px";></div>
                                 <div class="border-portfolio">
                                     <h3 class="portfolio-title">Технокряк</h3>
                                     <p class="portfolio-subtitle">Веб-сайт</p>
                                 </div>
+                            </a>
                         </li>     
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПостерNewOrleavsGoldenStar1.jpg" alt="два гравці в баскетбол" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                                <p class="portfolio-subtitle">Дизайн</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПостерNewOrleavsGoldenStar1.jpg" alt="два гравці в баскетбол" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                                    <p class="portfolio-subtitle">Дизайн</p>
+                                </div>
+                            </a>
                         </li>                  
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/РесторанSeafood1.jpg" alt="лого ресторану з рибою" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
-                                <p class="portfolio-subtitle">Додаток</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/РесторанSeafood1.jpg" alt="лого ресторану з рибою" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
+                                    <p class="portfolio-subtitle">Додаток</p>
+                                </div>
+                            </a>
                         </li>                 
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктPrime1.jpg" alt="навушники" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title">Проєкт <span lang="en">Prime</span></h3>
-                                <p class="portfolio-subtitle">Маркетинг</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктPrime1.jpg" alt="навушники" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title">Проєкт <span lang="en">Prime</span></h3>
+                                    <p class="portfolio-subtitle">Маркетинг</p>
+                                </div>
+                            </a>
                         </li>                    
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктBoxes1.jpg" alt="коробки" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title">Проєкт <span lang="en">Boxes</span></h3>
-                                <p class="portfolio-subtitle">Додаток</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктBoxes1.jpg" alt="коробки" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title">Проєкт <span lang="en">Boxes</span></h3>
+                                    <p class="portfolio-subtitle">Додаток</p>
+                                </div>
+                            </a>
                         </li>                    
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/InspirationhasnoBorders1.jpg" alt="екран монітора" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title" lang="en">Inspiration has no Borders</h3>
-                                <p class="portfolio-subtitle">Веб-сайт</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/InspirationhasnoBorders1.jpg" alt="екран монітора" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title" lang="en">Inspiration has no Borders</h3>
+                                    <p class="portfolio-subtitle">Веб-сайт</p>
+                                </div>
+                            </a>
                         </li>                   
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ВиданняLimitedEdition1.jpg" alt="розгорнута книжка" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title">Видання <span lang="en">Limited Edition</span></h3>
-                                <p class="portfolio-subtitle">Дизайн</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ВиданняLimitedEdition1.jpg" alt="розгорнута книжка" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title">Видання <span lang="en">Limited Edition</span></h3>
+                                    <p class="portfolio-subtitle">Дизайн</p>
+                                </div>
+                            </a>
                         </li>                
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктLAB1.jpg" alt="бірка" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title">Проєкт <span lang="en">LAB</span></h3>
-                                <p class="portfolio-subtitle">Маркетинг</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктLAB1.jpg" alt="бірка" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title">Проєкт <span lang="en">LAB</span></h3>
+                                    <p class="portfolio-subtitle">Маркетинг</p>
+                                </div>
+                            </a>
                         </li>                    
-                        <li class="item-portfolio">
-                            <div class="img-block"><img class="pictures-block" src="./images/портфоліо/GrowingBusiness1.jpg" alt="друкує на ноутбуці" width="370px"></div>
-                            <div class="border-portfolio">
-                                <h3 class="portfolio-title" lang="en">Growing Business</h3>
-                                <p class="portfolio-subtitle">Додаток</p>
-                            </div>
+                        <li class="">
+                            <a href="#" class="item-portfolio">
+                                <div class="img-block"><img class="pictures-block" src="./images/портфоліо/GrowingBusiness1.jpg" alt="друкує на ноутбуці" width="370px"></div>
+                                <div class="border-portfolio">
+                                    <h3 class="portfolio-title" lang="en">Growing Business</h3>
+                                    <p class="portfolio-subtitle">Додаток</p>
+                                </div>
+                            </a>
                         </li>
                     </div>
                 </ul>
@@ -123,14 +141,14 @@
         <div class="conteiner footer-container">
             <div class="address">
                 <a href="https://cardinal-cortez.github.io/goit-markup-hw-04" class="logo-footer"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
-                <address>
+                    <address>
                         <ul class="list-footer">
                             <li class="list-block"><a href="https://goo.gl/maps/taaaHP7BocLZiyMx6" target="_blank" rel="noopener noreferrer" class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
                             <li class="list-block"><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
                             <li class="list-block"><a href="tel:++380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
                         </ul>
+                    </address>
             </div>   
-            </address>
             <div class="just">
                 <p class="doit">приєднуйтесь</p>
                 <ul class="doit-list">
