--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             </div>
            <div class="conteiner">
                 <ul class="conteiner-portfolio">                    
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/технокряк1.jpg" alt="ноутбук" width="370px";></div>
                                 <div class="border-portfolio">
@@ -60,7 +60,7 @@
                                 </div>
                             </a>
                         </li>     
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПостерNewOrleavsGoldenStar1.jpg" alt="два гравці в баскетбол" width="370px"></div>
                                 <div class="border-portfolio">
@@ -69,7 +69,7 @@
                                 </div>
                             </a>
                         </li>                  
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/РесторанSeafood1.jpg" alt="лого ресторану з рибою" width="370px"></div>
                                 <div class="border-portfolio">
@@ -78,7 +78,7 @@
                                 </div>
                             </a>
                         </li>                 
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктPrime1.jpg" alt="навушники" width="370px"></div>
                                 <div class="border-portfolio">
@@ -87,7 +87,7 @@
                                 </div>
                             </a>
                         </li>                    
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктBoxes1.jpg" alt="коробки" width="370px"></div>
                                 <div class="border-portfolio">
@@ -96,7 +96,7 @@
                                 </div>
                             </a>
                         </li>                    
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/InspirationhasnoBorders1.jpg" alt="екран монітора" width="370px"></div>
                                 <div class="border-portfolio">
@@ -105,7 +105,7 @@
                                 </div>
                             </a>
                         </li>                   
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ВиданняLimitedEdition1.jpg" alt="розгорнута книжка" width="370px"></div>
                                 <div class="border-portfolio">
@@ -114,7 +114,7 @@
                                 </div>
                             </a>
                         </li>                
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/ПроєктLAB1.jpg" alt="бірка" width="370px"></div>
                                 <div class="border-portfolio">
@@ -123,7 +123,7 @@
                                 </div>
                             </a>
                         </li>                    
-                        <li class="">
+                        <li class="conteiner-portfolio-li">
                             <a href="#" class="item-portfolio">
                                 <div class="img-block"><img class="pictures-block" src="./images/портфоліо/GrowingBusiness1.jpg" alt="друкує на ноутбуці" width="370px"></div>
                                 <div class="border-portfolio">
@@ -158,7 +158,7 @@
                         </a></li>
                     <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
                         <svg class="doit-soc-icons" width="20" height="20">
-                        <use href="../images/icons.svg#icon-twitter"></use></svg>
+                        <use href="./images/icons.svg#icon-twitter"></use></svg>
                         </a></li>
                     <li class="doit-soc-item"><a href="#" class="doit-soc-link" target="_blank">
                         <svg class="doit-soc-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use>
